--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
-    <script src="/js/bootstrap.js"></script>
+    <script src="js/bootstrap.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
 </body>
 
